force-app/main/default/objects/Patient_Screener__c/Patient_Screener__c.object-meta.xml
<CustomObject>
    <label>Patient Screener</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Screener Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Screeners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>