force-app/main/default/objects/Patient_Screener__c/fields/Notes_new__c.field-meta.xml
<CustomField>
    <fullName>Notes_new__c</fullName>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>