force-app/main/default/objects/Patient_Screener__c/fields/Notes_short__c.field-meta.xml
<CustomField>
    <fullName>Notes_short__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>