force-app/main/default/objects/Patient_Screener__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient Screeners</relationshipLabel>
    <relationshipName>Patient_Screeners</relationshipName>
    <type>Lookup</type>
</CustomField>